# template_simple_gtest

./: .gitignore  .travis.yml  README.md  appveyor.yml  cmake.yml
.github/workflows/: cmake.yml
src/: CMakeLists.txt
tests/: unit_tests.cpp
